<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fruits</name>
  <version>0.0.0</version>
  <description>detects fruits</description>
  <maintainer email="marcel.radke@posteo.de">Marcel Radke</maintainer>
  <license>MIT</license>
  
	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>cv2</exec_depend>
	<exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
